Replaced new Integer( xxx ) by Integer.valueof( xxx )
git-svn-id: https://svn.apache.org/repos/asf/directory/trunks/shared@491267 13f79535-47bb-0310-9956-ffa450edef68